# fht

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml  wheels.yml
build_tools/: repair_macos_wheel.sh
cmake/: fhtConfig.cmake.in
data/: optimization_results_v7.json
include/fht/: fht.h  fht_config.h
include/fht/neon/: fht_neon.h
include/fht/x86/: fast_copy.h  fht.h  fht_impl.h  fht_x86.h
python/: CMakeLists.txt  benchmarks.py  pyproject.toml
python/fht_cpu/: __init__.py
python/src/: fht_bindings.cpp
python/tests/: test_fht.py
scripts/: fht_neon_v7_sample.h  gen_neon_v7.py  optimize_v7_grid.py
tests/: fht_reference.h  test_basic.cpp  test_fht.cpp
